--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,13 @@
 [build]
-builder = "NIXPACKS"
+builder = "nixpacks"
 buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "uvicorn app:app --host 0.0.0.0 --port $PORT"
 healthcheckPath = "/"
 healthcheckTimeout = 300
+restartPolicyType = "on_failure"
+restartPolicyMaxRetries = 10
 
 [env]
-PYTHON_VERSION = "3.12.9"
+PYTHON_VERSION = "3.9"
