--- a/railway.toml
+++ b/railway.toml
@@ -4,7 +4,7 @@ buildCommand = "pip install -r requirements.txt"
 
 [deploy]
 startCommand = "python -m uvicorn app:app --host 0.0.0.0 --port $PORT"
-healthcheckPath = "/"
+healthcheckPath = "/health"
 healthcheckTimeout = 300
 healthcheckHost = "127.0.0.1"  # Use localhost for health checks
 restartPolicyType = "on_failure"
